{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 345,
  "lineage": "9cdc4d65-137c-8f99-9c0e-98a4c1463add",
  "resources": [
    {
      "module": "module.subnets",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:626890281217:vpc/vpc-0080a99852c2a0885",
            "cidr_block": "172.16.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0767e5a2fb50726d7",
                "cidr_block": "172.16.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-dd03b7b6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0080a99852c2a0885",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-09a7f7afbae40f482",
            "ipv6_cidr_block": "2600:1f16:46a:3600::/56",
            "main_route_table_id": "rtb-097dedb478b02b1ed",
            "owner_id": "626890281217",
            "state": "available",
            "tags": {
              "Name": "endpoint-test-vpc",
              "Namespace": "endpoint",
              "Stage": "test"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:626890281217:security-group/sg-0d311eda6220611b2",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0d311eda6220611b2",
            "ingress": [],
            "name": "default",
            "owner_id": "626890281217",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Default Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0080a99852c2a0885"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_eip",
      "name": "default",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-05db5c9d2ad9f1397",
            "domain": "vpc",
            "id": "eipalloc-0be9044849e021881",
            "network_interface": "eni-0260196f38d7b1c53",
            "private_dns": "ip-172-16-102-218.us-east-2.compute.internal",
            "private_ip": "172.16.102.218",
            "public_dns": "ec2-3-20-32-218.us-east-2.compute.amazonaws.com",
            "public_ip": "3.20.32.218",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Attributes": "private",
              "Name": "endpoint-test-subnet-private-us-east-2a",
              "Namespace": "endpoint",
              "Stage": "test",
              "cpco.io/subnet/type": "private"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-006b73ac211b77e6c",
            "domain": "vpc",
            "id": "eipalloc-0a141a6cda23e3616",
            "network_interface": "eni-0faf4a38a013fdff1",
            "private_dns": "ip-172-16-147-27.us-east-2.compute.internal",
            "private_ip": "172.16.147.27",
            "public_dns": "ec2-3-22-19-253.us-east-2.compute.amazonaws.com",
            "public_ip": "3.22.19.253",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Attributes": "private",
              "Name": "endpoint-test-subnet-private-us-east-2b",
              "Namespace": "endpoint",
              "Stage": "test",
              "cpco.io/subnet/type": "private"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_instance",
      "name": "nat_instance",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0861b6ce3a0e1804e",
            "owner_id": "626890281217",
            "tags": {
              "Name": "endpoint-test-vpc",
              "Namespace": "endpoint",
              "Stage": "test"
            },
            "vpc_id": "vpc-0080a99852c2a0885"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "default",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0be9044849e021881",
            "id": "nat-08db58c3f15e16d86",
            "network_interface_id": "eni-0260196f38d7b1c53",
            "private_ip": "172.16.102.218",
            "public_ip": "3.20.32.218",
            "subnet_id": "subnet-09d5b8cbacf4abed7",
            "tags": {
              "Attributes": "nat",
              "Name": "endpoint-test-subnet-nat-us-east-2a",
              "Namespace": "endpoint",
              "Stage": "test"
            }
          },
          "dependencies": [
            "module.subnets.aws_eip.default",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a141a6cda23e3616",
            "id": "nat-0d76d963209735204",
            "network_interface_id": "eni-0faf4a38a013fdff1",
            "private_ip": "172.16.147.27",
            "public_ip": "3.22.19.253",
            "subnet_id": "subnet-0c835a2e52561fd88",
            "tags": {
              "Attributes": "nat",
              "Name": "endpoint-test-subnet-nat-us-east-2b",
              "Namespace": "endpoint",
              "Stage": "test"
            }
          },
          "dependencies": [
            "module.subnets.aws_eip.default",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0b5e8af687cadd9bb",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "626890281217",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-09003f7e4d390275f",
              "subnet-0fa838a1d56d20c2a"
            ],
            "tags": {
              "Attributes": "private",
              "Name": "endpoint-test-subnet",
              "Namespace": "endpoint",
              "Stage": "test",
              "cpco.io/subnet/type": "private"
            },
            "vpc_id": "vpc-0080a99852c2a0885"
          },
          "dependencies": [
            "module.subnets.aws_subnet.private",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0d7ab594ed3b499cd",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "626890281217",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-09d5b8cbacf4abed7",
              "subnet-0c835a2e52561fd88"
            ],
            "tags": {
              "Attributes": "public",
              "Name": "endpoint-test-subnet",
              "Namespace": "endpoint",
              "Stage": "test",
              "cpco.io/subnet/type": "public"
            },
            "vpc_id": "vpc-0080a99852c2a0885"
          },
          "dependencies": [
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "default",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ed8404b03d5eaa721080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-08db58c3f15e16d86",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ed8404b03d5eaa72",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.subnets.aws_eip.default",
            "module.subnets.aws_nat_gateway.default",
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0dcca339f96dd30f81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0d76d963209735204",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0dcca339f96dd30f8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.subnets.aws_eip.default",
            "module.subnets.aws_nat_gateway.default",
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_instance",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0861b6ce3a0e1804e",
            "id": "r-rtb-04bb262c2887914fe1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04bb262c2887914fe",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.subnets.aws_route_table.public",
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ed8404b03d5eaa72",
            "owner_id": "626890281217",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-08db58c3f15e16d86",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Attributes": "private",
              "Name": "endpoint-test-subnet-private-us-east-2a",
              "Namespace": "endpoint",
              "Stage": "test",
              "cpco.io/subnet/type": "private"
            },
            "vpc_id": "vpc-0080a99852c2a0885"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0dcca339f96dd30f8",
            "owner_id": "626890281217",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0d76d963209735204",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Attributes": "private",
              "Name": "endpoint-test-subnet-private-us-east-2b",
              "Namespace": "endpoint",
              "Stage": "test",
              "cpco.io/subnet/type": "private"
            },
            "vpc_id": "vpc-0080a99852c2a0885"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04bb262c2887914fe",
            "owner_id": "626890281217",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0861b6ce3a0e1804e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Attributes": "public",
              "Name": "endpoint-test-subnet",
              "Namespace": "endpoint",
              "Stage": "test",
              "cpco.io/subnet/type": "public"
            },
            "vpc_id": "vpc-0080a99852c2a0885"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061036ba9d854e910",
            "route_table_id": "rtb-0ed8404b03d5eaa72",
            "subnet_id": "subnet-09003f7e4d390275f"
          },
          "dependencies": [
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_subnet.private",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c79e38351ff1c261",
            "route_table_id": "rtb-0dcca339f96dd30f8",
            "subnet_id": "subnet-0fa838a1d56d20c2a"
          },
          "dependencies": [
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_subnet.private",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e48a0bb6c7e66975",
            "route_table_id": "rtb-04bb262c2887914fe",
            "subnet_id": "subnet-09d5b8cbacf4abed7"
          },
          "dependencies": [
            "module.subnets.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aae20e5b3f35257a",
            "route_table_id": "rtb-04bb262c2887914fe",
            "subnet_id": "subnet-0c835a2e52561fd88"
          },
          "dependencies": [
            "module.subnets.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_default",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.elastic_beanstalk_environment",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:626890281217:security-group/sg-03a5507b5c592e0fe",
            "description": "Allow inbound traffic from provided Security Groups",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03a5507b5c592e0fe",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0d311eda6220611b2"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "endpoint-test-env",
            "name_prefix": null,
            "owner_id": "626890281217",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "endpoint-test-env",
              "Namespace": "endpoint",
              "Stage": "test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0080a99852c2a0885"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nat_instance",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nat_instance_egress",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nat_instance_ingress",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:626890281217:subnet/subnet-09003f7e4d390275f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.16.0.0/19",
            "id": "subnet-09003f7e4d390275f",
            "map_public_ip_on_launch": false,
            "owner_id": "626890281217",
            "tags": {
              "Attributes": "private",
              "Name": "endpoint-test-subnet-private-us-east-2a",
              "Namespace": "endpoint",
              "Stage": "test",
              "cpco.io/subnet/type": "private"
            },
            "vpc_id": "vpc-0080a99852c2a0885"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:626890281217:subnet/subnet-0fa838a1d56d20c2a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.16.32.0/19",
            "id": "subnet-0fa838a1d56d20c2a",
            "map_public_ip_on_launch": false,
            "owner_id": "626890281217",
            "tags": {
              "Attributes": "private",
              "Name": "endpoint-test-subnet-private-us-east-2b",
              "Namespace": "endpoint",
              "Stage": "test",
              "cpco.io/subnet/type": "private"
            },
            "vpc_id": "vpc-0080a99852c2a0885"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:626890281217:subnet/subnet-09d5b8cbacf4abed7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.16.96.0/19",
            "id": "subnet-09d5b8cbacf4abed7",
            "map_public_ip_on_launch": true,
            "owner_id": "626890281217",
            "tags": {
              "Attributes": "public",
              "Name": "endpoint-test-subnet-public-us-east-2a",
              "Namespace": "endpoint",
              "Stage": "test",
              "cpco.io/subnet/type": "public"
            },
            "vpc_id": "vpc-0080a99852c2a0885"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:626890281217:subnet/subnet-0c835a2e52561fd88",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.16.128.0/19",
            "id": "subnet-0c835a2e52561fd88",
            "map_public_ip_on_launch": true,
            "owner_id": "626890281217",
            "tags": {
              "Attributes": "public",
              "Name": "endpoint-test-subnet-public-us-east-2b",
              "Namespace": "endpoint",
              "Stage": "test",
              "cpco.io/subnet/type": "public"
            },
            "vpc_id": "vpc-0080a99852c2a0885"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:626890281217:vpc/vpc-0080a99852c2a0885",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-06bb4a3b278a055a5",
            "default_route_table_id": "rtb-097dedb478b02b1ed",
            "default_security_group_id": "sg-0d311eda6220611b2",
            "dhcp_options_id": "dopt-dd03b7b6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0080a99852c2a0885",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-09a7f7afbae40f482",
            "ipv6_cidr_block": "2600:1f16:46a:3600::/56",
            "main_route_table_id": "rtb-097dedb478b02b1ed",
            "owner_id": "626890281217",
            "tags": {
              "Name": "endpoint-test-vpc",
              "Namespace": "endpoint",
              "Stage": "test"
            }
          }
        }
      ]
    }
  ]
}